testsuite/poke.pkl/sl-diag-1.pk
/* { dg-do compile } */

var i = 1 <<. (31 + 1); /* { dg-error "too big" } */
